objects/TAV4__Geo_Unit__c.object
<CustomObject>
    <description>A single unit of geography used for territory alignment. In the US this is typically a ZIP code.</description>
    <fields>
        <fullName>TAV4__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TAV4__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Geo_Container__c</fullName>
        <label>Geo Container</label>
        <referenceTo>TAV4__Geo_Container__c</referenceTo>
        <relationshipLabel>Geo Units</relationshipLabel>
        <relationshipName>Geo_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TAV4__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Notes__c</fullName>
        <label>Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>Geo Unit</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <columns>NAME</columns>
        <columns>TAV4__Description__c</columns>
        <columns>TAV4__Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TAV4__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geo Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>